<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- TITLE ELEMENTS -->
    <string name="app_name">Venus</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_login_activity">Login</string>

    <!-- GENERAL -->
    <string name="hello_world">This is our message</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="passwordconfirm">Re-Type Password</string>
    <string name="signin">Sign In</string>
    <string name="send_password">Send Password</string>
    <string name="sent">Sent</string>
    <string name="rememberme">Remember me</string>
    <string name="copyright">
        Welcome to the world of confusion, where who is who is never so straight
        forward. Sign in and begin your journey into the wonderland. Built by
        Dashee.</string>
    <string name="settings">Settings</string>
    <string name="register">Register</string>

    <!-- ERRORS -->
    <string name="error_empty_name">You must fill in your name</string>
    <string name="error_empty_email">Email cannot be empty</string>
    <string name="error_invalid_email">Email address must be valid</string>
    <string name="error_empty_password">Password must be filled in</string>
    <string name="error_small_password">
        Password must be greater the 4 characters
    </string>
    <string name="error_match_password">Passwords don\'t match</string>
    <string name="error_not_agreed_terms">
        You must agree to the terms and conditions
    </string>

    <!-- FORGOT PASSWORD -->
    <string name="forgotpassword">Forgot Password?</string>
    <string name="forgotpassword_info">
        Let us help you out just enter your email address and we will send you
        your details.
    </string>
    <string name="forgotpassword_notice">
        Note all emails are sent from yourpassword@dashee.co.uk and you should
        not trust any other sources!
    </string>
    <string name="forgotpassword_email_sent">
        Your password was sent. Check your email!
    </string>

    <string name="registered">
        Check your email to authenticate your account
    </string>

    <string name="security">Secure your account</string>
    <string name="your_info">Your information</string>
    <string name="name">Your Name</string>
    <string name="agree_to_terms">
        By signing in you agree to our terms and conditions
    </string>
    <string name="terms">
        For the full <font color="red">terms and condition</font> click here
    </string>

    <!-- ACTION TEXT -->
    <string name="connecting">Connecting</string>
    <string name="registering">Registering...</string>

</resources>
