<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.dashee.venus.ForgotPasswordActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:text="@string/forgotpassword_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/info" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email"
            android:layout_marginTop="20dp"
            android:hint="@string/email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/forgotpassword_notice"
            android:id="@+id/notice"
            android:textSize="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_password"
            android:id="@+id/sendEmail"
            android:layout_gravity="right"
            android:onClick="sendEmail"
            style="?android:attr/buttonStyleSmall" />
    </LinearLayout>

</RelativeLayout>
